--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="pub.css?ad48fc27_b605_4e2e_96a6_fbc9f9c7b430_7"/>
+	<link rel="stylesheet" href="pub.css?66791a8c_de47_42fe_a03c_dfea0ca03e5d_7"/>
 
 	<style>
 
@@ -196,7 +196,7 @@ document.wafxScreenInfos =
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;">Nesvorny, David, Li, Rixin, Simon, Jacob B., Youdin, Andrew N., Richardson, Derek C., Marschall, Raphael, Grundy, William M. “Binary Planetesimal Formation from Gravitationally Collapsing Pebble Clouds”, submitted to PSJ.</p>
 <p style="text-align: justify;">&nbsp;</p>
-<p style="text-align: justify;">Gole, Daniel A., Simon, Jacob B., Li, Rixin, Youdin, Andrew N., Armitage, Philip J. "Turbulence Regulates the Rate of Planetesimal Formation via Gravitational Collapse", submitted to ApJ, <a href="https://arxiv.org/abs/2001.10000" target="_blank"  style="text-decoration: underline;">arXiv Link</a>&nbsp;</p>
+<p style="text-align: justify;">Gole, Daniel A., Simon, Jacob B., Li, Rixin, Youdin, Andrew N., Armitage, Philip J. "Turbulence Regulates the Rate of Planetesimal Formation via Gravitational Collapse", accepted to ApJ, <a href="https://arxiv.org/abs/2001.10000" target="_blank"  style="text-decoration: underline;">arXiv Link</a>&nbsp;</p>
 <p style="text-align: justify;"><br />Nesvorny, David, Li, Rixin, Youdin, Andrew N., <span class="t7"  >Simon, Jacob B.</span>, Grundy, William M. “Trans-Neptunian Binary Evidence for Planetesimal Formation by the Streaming Instability”, 2019, Nature Astronomy, Vol. 3, 808-812, <a href="https://www.nature.com/articles/s41550-019-0806-z" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
 <p style="text-align: justify;">&nbsp;</p>
 <p style="text-align: justify;"><span class="t8"  >Simon, Jacob B.</span>, Bai, Xue-Ning, Flaherty, Kevin M., Hughes, A. Meredith, ``Origin of Weak Turbulence in the Outer Regions of Protoplanetary Disks”, 2018, ApJ, 865, 10-20, <a href="https://ui.adsabs.harvard.edu/abs/2018ApJ...865...10S/abstract" target="_blank"  style="text-decoration: underline;">Link</a>&nbsp;</p>
