--- a/pub.html
+++ b/pub.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="pub.css?66791a8c_de47_42fe_a03c_dfea0ca03e5d_7"/>
+	<link rel="stylesheet" href="pub.css?ff8de8d6_b756_492f_af70_5454311cc858_7"/>
 
 	<style>
 
@@ -216,7 +216,7 @@ document.wafxScreenInfos =
 <div class="compVis_17"><div class='comp_17'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_18"><div class='comp_18'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_19"><div  class='comp_19 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t13"  >Full Publication List</span>&nbsp;</p></div></div>
-<div class="compVis_20"><div class='comp_20'  title=""><a href="http://simon.physics.iastate.edu/PDF/publications.pdf"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-52-833px-PDF_file_icon.svg.png" alt=""></a></div></div>
+<div class="compVis_20"><div class='comp_20'  title=""><a href="https://www.dropbox.com/s/vt62n212dy630fu/publications.pdf?dl=0" target="_blank"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-52-833px-PDF_file_icon.svg.png" alt=""></a></div></div>
 <div class="compVis_21"><div  class='comp_21 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><a href="https://tinyurl.com/y5d9vxut" target="_blank" ><span class="t14"  >Find me on ADS </span></a>&nbsp;</p>
 <p><span class="t15"  >(refereed papers only)</span>&nbsp;</p></div></div>
 <div class="compVis_22"><div  class='comp_22 wafxText '><div class='textShape_1024' style='height:5px;'></div><p><span class="t16"  >PhD Thesis</span>&nbsp;</p></div></div>
