--- a/cv.html
+++ b/cv.html
@@ -65,7 +65,7 @@ document.wafxScreenInfos =
 
 	
 
-	<link rel="stylesheet" href="cv.css?0c9ea2b5_a099_4727_9510_0419fdebd476_7"/>
+	<link rel="stylesheet" href="cv.css?9b06bf73_99aa_43c6_9461_04cb8a7a6368_7"/>
 
 	<style>
 
@@ -235,7 +235,7 @@ document.wafxScreenInfos =
 <div class="compVis_24"><div class='comp_24'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_25"><div class='comp_25'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
 <div class="compVis_26"><div class='comp_26'  title=""><img  class="wafx-img-picture" src="./wafx_res/Images/0-7-689289.gif" alt=""></div></div>
-<div class="compVis_27"><div class='comp_27'  title=""><a href="https://www.dropbox.com/s/0m8hlv4afspz6wc/CV%20Complete.pdf?dl=0" target="_blank"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-52-833px-PDF_file_icon.svg.png" alt=""></a></div></div>
+<div class="compVis_27"><div class='comp_27'  title=""><a href="https://www.physastro.iastate.edu/files/2021-02/CV%20Complete.pdf" target="_blank"  ><img  class="wafx-img-picture" src="./wafx_res/Images/0-52-833px-PDF_file_icon.svg.png" alt=""></a></div></div>
 
 
 
